update description section

--- a/index.html
+++ b/index.html
@@ -199,21 +199,29 @@
             <div class="row gx-xxl-66px gx-xxxl-110px">
               <div class="col-xl-7">
                 <div class="description-list">
-                  <span class="description-list-menu">Finance</span>
-                  <span class="description-list-menu">Education</span>
-                  <span class="description-list-menu">E-commerce</span>
-                  <span class="description-list-menu">Data Science & Statistic</span>
-                  <span class="description-list-menu">Agriculture</span>
-                  <span class="description-list-menu">Retail</span>
-                  <span class="description-list-menu">Sports</span>
-                  <span class="description-list-menu">Electronics</span>
-                  <span class="description-list-menu">Beauty</span>
+                  <span data-link="description1" class="description-list-menu">Finance</span>
+                  <span data-link="description2" class="description-list-menu">Education</span>
+                  <span data-link="description3" class="description-list-menu">E-commerce</span>
+                  <span data-link="description1" class="description-list-menu">Data Science & Statistic</span>
+                  <span data-link="description1" class="description-list-menu">Agriculture</span>
+                  <span data-link="description1" class="description-list-menu">Retail</span>
+                  <span data-link="description1" class="description-list-menu">Sports</span>
+                  <span data-link="description1" class="description-list-menu">Electronics</span>
+                  <span data-link="description1" class="description-list-menu">Beauty</span>
                 </div>
               </div>
               <div class="col-xl-5">
-                <div class="description-content">
+                <div class="description-content fade-up" id="description1">
                   <h2 class="description-title">Creativity in Finance</h2>
                   <p class="description-text">No word can explain better of what could initiate positive progression in the financial industry other than “creativity”. Enam Dua works with companies that want to push their limit to make impactful changes in this sector. Financial inclusion is nearly impossible without the use of digital technology.</p>
+                </div>
+                <div class="description-content fade-up" id="description2">
+                  <h2 class="description-title">Knowledge Accross Archipelago</h2>
+                  <p class="description-text">In spirit of giving back to our community all across the nation, Enam Dua also works with companies to catalyze reach and equality of education throughout Indonesia. Digital technology for a better education, especially for our own children.</p>
+                </div>
+                <div class="description-content fade-up" id="description3">
+                  <h2 class="description-title">E-commerce Boom</h2>
+                  <p class="description-text">Pandemic pushed transformation faster, e-commerce's growth went through the roof and it continue to grow. There is no reason to not being agile especially in this sector. It is gamechanging for most of conventional local retailer. Enam Dua takes the role in transforming their journey, digitzing them, and focusing on how the businesses interact with its customers. Digital technology is not just a platform of buying and selling, it is also a source of insight, personalized experiences, and definitely, the most realistic vehicle to overcome any potential challenges and grwoth.</p>
                 </div>
               </div>
             </div>
@@ -396,6 +404,7 @@
 
     <!-- scrips -->
     <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="assets/js/index.js"></script>
 
     <script>
       function toggleMainNav() {
