fixing description section.

--- a/index.html
+++ b/index.html
@@ -198,30 +198,110 @@
           <div class="content-container">
             <div class="row gx-xxl-66px gx-xxxl-110px">
               <div class="col-xl-7">
-                <div class="description-list">
-                  <span data-link="description1" class="description-list-menu">Finance</span>
-                  <span data-link="description2" class="description-list-menu">Education</span>
-                  <span data-link="description3" class="description-list-menu">E-commerce</span>
-                  <span data-link="description1" class="description-list-menu">Data Science & Statistic</span>
-                  <span data-link="description1" class="description-list-menu">Agriculture</span>
-                  <span data-link="description1" class="description-list-menu">Retail</span>
-                  <span data-link="description1" class="description-list-menu">Sports</span>
-                  <span data-link="description1" class="description-list-menu">Electronics</span>
-                  <span data-link="description1" class="description-list-menu">Beauty</span>
+                <div class="description-tab">
+                  <ul id="myTab-tabs-left" class="nav description-list" role="tablist">
+                    <li class="description-list-menu">
+                      <span id="finance-tab" href="#description1" role="tab" data-bs-toggle="tab" aria-controls="finance-kv-1" aria-selected="true">
+                        Finance
+                      </span>
+                    </li>
+                    <li class="description-list-menu">
+                      <span id="education-tab" href="#description2" role="tab" data-bs-toggle="tab" aria-controls="education">
+                        Education
+                      </span>
+                    </li>
+                    <li class="description-list-menu">
+                      <span id="ecommerce-tab" href="#description3" role="tab" data-bs-toggle="tab" aria-controls="e-commerce">
+                        E-commerce
+                      </span>
+                    </li>
+                    <li class="description-list-menu">
+                      <span id="datascience-tab" href="#description4" role="tab" data-bs-toggle="tab" aria-controls="data science">
+                        Data Science & Statistic
+                      </span>
+                    </li>
+                    <li class="description-list-menu">
+                      <span id="agriculture-tab" href="#description5" role="tab" data-bs-toggle="tab" aria-controls="agriculture">
+                        Agriculture
+                      </span>
+                    </li>
+                    <li class="description-list-menu">
+                      <span id="retail-tab" href="#description6" role="tab" data-bs-toggle="tab" aria-controls="retail">
+                        Retail
+                      </span>
+                    </li>
+                    <li class="description-list-menu">
+                      <span id="sports-tab" href="#description7" role="tab" data-bs-toggle="tab" aria-controls="sports">
+                        Sports
+                      </span>
+                    </li>
+                    <li class="description-list-menu">
+                      <span id="electronics-tab" href="#description8" role="tab" data-bs-toggle="tab" aria-controls="electronics">
+                        Electronics
+                      </span>
+                    </li>
+                    <li class="description-list-menu">
+                      <span id="beauty-tab" href="#description9" role="tab" data-bs-toggle="tab" aria-controls="beauty">
+                        Beauty
+                      </span>
+                    </li>
+                  </ul>
                 </div>
               </div>
-              <div class="col-xl-5">
-                <div class="description-content fade-up" id="description1">
-                  <h2 class="description-title">Creativity in Finance</h2>
-                  <p class="description-text">No word can explain better of what could initiate positive progression in the financial industry other than “creativity”. Enam Dua works with companies that want to push their limit to make impactful changes in this sector. Financial inclusion is nearly impossible without the use of digital technology.</p>
+              <div id="myTabContent-tabs-left" class="col-xl-5 tab-content">
+                <div class="tab-pane fade show active" id="description1" role="tabpanel" aria-labelledby="finance-tab-tabs-left">
+                  <div class="description-content">
+                    <h2 class="description-title">Creativity in Finance</h2>
+                    <p class="description-text">No word can explain better of what could initiate positive progression in the financial industry other than “creativity”. Enam Dua works with companies that want to push their limit to make impactful changes in this sector. Financial inclusion is nearly impossible without the use of digital technology.</p>
+                  </div>
                 </div>
-                <div class="description-content fade-up" id="description2">
-                  <h2 class="description-title">Knowledge Accross Archipelago</h2>
-                  <p class="description-text">In spirit of giving back to our community all across the nation, Enam Dua also works with companies to catalyze reach and equality of education throughout Indonesia. Digital technology for a better education, especially for our own children.</p>
+                <div class="tab-pane fade show" id="description2" role="tabpanel" aria-labelledby="education-tab-tabs-left">
+                  <div class="description-content">
+                    <h2 class="description-title">Knowledge Accross Archipelago</h2>
+                    <p class="description-text">In spirit of giving back to our community all across the nation, Enam Dua also works with companies to catalyze reach and equality of education throughout Indonesia. Digital technology for a better education, especially for our own children.</p>
+                  </div>
                 </div>
-                <div class="description-content fade-up" id="description3">
-                  <h2 class="description-title">E-commerce Boom</h2>
-                  <p class="description-text">Pandemic pushed transformation faster, e-commerce's growth went through the roof and it continue to grow. There is no reason to not being agile especially in this sector. It is gamechanging for most of conventional local retailer. Enam Dua takes the role in transforming their journey, digitzing them, and focusing on how the businesses interact with its customers. Digital technology is not just a platform of buying and selling, it is also a source of insight, personalized experiences, and definitely, the most realistic vehicle to overcome any potential challenges and grwoth.</p>
+                <div class="tab-pane fade show" id="description3" role="tabpanel" aria-labelledby="ecommerce-tab-tabs-left">
+                  <div class="description-content">
+                    <h2 class="description-title">E-commerce Boom</h2>
+                    <p class="description-text">Pandemic pushed transformation faster, e-commerce's growth went through the roof and it continue to grow. There is no reason to not being agile especially in this sector. It is gamechanging for most of conventional local retailer. Enam Dua takes the role in transforming their journey, digitzing them, and focusing on how the businesses interact with its customers. Digital technology is not just a platform of buying and selling, it is also a source of insight, personalized experiences, and definitely, the most realistic vehicle to overcome any potential challenges and grwoth.</p>
+                  </div>
+                </div>
+                <div class="tab-pane fade show" id="description4" role="tabpanel" aria-labelledby="ecommerce-tab-tabs-left">
+                  <div class="description-content">
+                    <h2 class="description-title">Data Science and Statistics</h2>
+                    <p class="description-text">In this shifting-era, businesses are not able to see as far as they used to. They also can’t rely solely just on their historical data and experiences; since the pandemic has brutally changed the game. Enam Dua has worked with corporations and some start-up companies to overcome these challenges. A dynamic situation could only be handled by using technology that precedes these never ending changes.</p>
+                  </div>
+                </div>
+                <div class="tab-pane fade show" id="description5" role="tabpanel" aria-labelledby="ecommerce-tab-tabs-left">
+                  <div class="description-content">
+                    <h2 class="description-title">Agriculture Industry</h2>
+                    <p class="description-text">Agriculture in Indonesia has as many challenges as its potentials. We are talking about remote lands, millions of hard-headed field workers, diverse & old culture, unique type of inventory, challenging logistic, and ultimately - internet & digital technological barrier. However, the intention and the willingness to change is already on the table. Enam Dua is working with corporations and start-up companies to create technologies that serve as a bridge for them to migrate smoothly. Simplifying some things that are considered complex until even a fifth grader can use it with ease.</p>
+                  </div>
+                </div>
+                <div class="tab-pane fade show" id="description6" role="tabpanel" aria-labelledby="ecommerce-tab-tabs-left">
+                  <div class="description-content">
+                    <h2 class="description-title">All About Dynamic</h2>
+                    <p class="description-text">The popularity of conventional bricks and mortar stores has already been declining, even before the pandemic hits. Consumers are continuously looking for more experiences and convenience. However, today’s digital world has made it possible for many retailers to overcome those challenges by taking their business online and by using modern digital trends into their processes to offer an advanced way of shopping. Other than e-commerce, Enam Dua is also working on several digital trends such as mobile applications, fulfilment automation, and extended reality.</p>
+                  </div>
+                </div>
+                <div class="tab-pane fade show" id="description7" role="tabpanel" aria-labelledby="ecommerce-tab-tabs-left">
+                  <div class="description-content">
+                    <h2 class="description-title">Inside and Outside of Court</h2>
+                    <p class="description-text">Sports enterprises undergoing a digital transformation should think through what digital capabilities they need and how to use them effectively to change the three organizational cornerstones — people, process, and technology. On the external matters, many sports fans are no longer interested in the game alone – they crave the kind of exclusive and shareable experiences that can be amplified by technology. In order to build digital capabilities in sport industry, Enam Dua is also working with sports enterprises to help them view problem solving through a digital lens.</p>
+                  </div>
+                </div>
+                <div class="tab-pane fade show" id="description8" role="tabpanel" aria-labelledby="ecommerce-tab-tabs-left">
+                  <div class="description-content">
+                    <h2 class="description-title">Electronics Industry</h2>
+                    <p class="description-text">Since the introduction of iPhone in 2007, that was the beginning of the series of internet disruption into the whole electronic business. From industrial applications to consumer products, the IoT (internet of things) is quickly transforming the way everyone interacts with the physical and digital world. IoT is giving the real benefits for every electronic brands to running on a more secure innovation platform in order to make improvement in product creation, production quality, and product user experiences. Enam Dua is working with some of the global electronics brands to overcome this industrial disruptive wave.</p>
+                  </div>
+                </div>
+                <div class="tab-pane fade show" id="description9" role="tabpanel" aria-labelledby="ecommerce-tab-tabs-left">
+                  <div class="description-content">
+                    <h2 class="description-title">Beauty Industry</h2>
+                    <p class="description-text">Companies in beauty industry requires a neat and serious management capability. An end to end hectic flow of business that is need to incorporating digital operating system and technologies to help their daily process run smoothly. Enam Dua is also working with a beauty company to help them grow with a better management process quality, and acompany them to exploring more potentials through digital inclusion.</p>
+                  </div>
                 </div>
               </div>
             </div>
